Update GitHub link in project actions

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="project-actions">
-                    <a href="#" target="_blank" class="icon-btn github">
+                    <a href="https://github.com/Kushwanthbyragoni/My-Portfolio" target="_blank" class="icon-btn github">
                         <img src="images/github.jpg">
                     </a>
                 </div>
